Fix code source URL converstion for class names containing spaces